--- a/css/main.css
+++ b/css/main.css
@@ -1,44 +1,48 @@
+ body {
+	font-family:'Gaegu', cursive;
+}
+
  .header-text {
-     text-align: right;
-     padding-top: 15px;
-     padding-bottom: 18px;
+    text-align: right;
+    padding-top: 15px;
+    padding-bottom: 18px;
 }
 
  .header-img {
-     float: left;
+    float: left;
 }
 
  header {
-     padding: 30px 30px 10px 30px;
-     margin: 5px;
+    padding: 30px 30px 10px 30px;
+    margin: 5px;
 }
 
  .hr-line {
-     border: 1px solid rgb(74, 61, 85);
+    border: 1px solid rgb(74, 61, 85);
 }
 
  .col-md-4:hover {
-     border: 4px solid blue;
-     border-radius: 20px;
-     padding: 0;
+    border: 4px solid blue;
+    border-radius: 20px;
+    padding: 0;
 }
 
  .col-md-4 {
-     padding-top: 20px;
+    padding-top: 20px;
+    width:400px;
 }
 
  .card-img-top:hover {
-     border-radius: 20px;
+    border-radius: 20px;
 }
 
  .container {
-     margin-left: 20px;
-     margin-right: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
  .quote {
-     padding: 0 30px;
-     font-weight:bold;
-     font-size:15px;
+    padding: 0 30px;
+	font-weight:bold;
+	font-size:15px;
 }
- 
