--- a/css/main.css
+++ b/css/main.css
@@ -28,11 +28,12 @@
 }
 
  .col-md-4 {
-    padding-top: 20px;
     width:400px;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
- .card-img-top:hover {
+ .card-img-top {
     border-radius: 20px;
 }
 
