--- a/css/main.css
+++ b/css/main.css
@@ -21,19 +21,19 @@
     border: 1px solid rgb(74, 61, 85);
 }
 
- .col-md-4:hover {
+ .col-md-4 {
+    width:400px;
+    padding-left: 0px;
+    padding-right: 0px;
+} 
+
+.col-md-4:hover {
     border: 4px solid blue;
     border-radius: 20px;
     padding: 0;
 }
 
- .col-md-4 {
-    width:400px;
-    padding-left: 0px;
-    padding-right: 0px;
-}
-
- .card-img-top {
+ .card-img-top:hover {
     border-radius: 20px;
 }
 
